--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
     "chalk": "^4.1.2",
-    "colors": "^1.4.0",
-    "nodemon": "^2.0.20"
+    "colors": "^1.4.0"
   },
   "name": "aps",
   "version": "1.0.0",
