--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "dependencies": {
     "chalk": "^4.1.2",
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   },
   "name": "aps",
   "version": "1.0.0",
   "description": "for learning purpose",
   "main": "app.js",
   "scripts": {
-    "start": "node ep7.js"
+    "start": "nodemon learnexpress.js"
   },
   "author": "aps",
   "license": "ISC"
