--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "colors": "^1.4.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "mongodb": "^5.0.15",
+    "mongoose": "^7.0.0",
     "nodemon": "^2.0.20"
   },
   "name": "aps",
